perf: 优化代码
