# entity/user_api.go
@@ -1,0 +1,10 @@
+package entity
+
+type UserLoginReq struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
+type UserLoginRps struct {
+	Token string `json:"token"`
+}
